# equational-reasoning-in-haskell

./: .gitignore  .travis.disabled.yaml  .travis.yml  Changelog.md  LICENSE  README.md  equational-reasoning.cabal  equational-reasoning.md  fourmolu.yaml  stack-8.0.2.yaml  stack-8.10.3.yaml  stack-8.2.1.yaml  stack-8.2.2.yaml  stack-8.6.3.yaml  stack-802.yaml  stack-804.yaml  stack-806.yaml  stack-808.yaml  stack-810.yaml  stack-9.0.1.yaml  stack-9.2.1.yaml  stack-9.2.4.yaml  stack-9.2.5.yaml  stack-9.4.3.yaml  stack-ghc800.yaml  stack-head.yaml  stack.yaml
.github/: FUNDING.yml
.github/workflows/: haskell.yaml  release.yml
Proof/: Base.hs  Equational.hs  Induction.hs  List.hs  Natural.hs  Propositional.hs
Proof/Internal/: THCompat.hs
Proof/Propositional/: Empty.hs  Inhabited.hs  TH.hs
ci-configs/: ghc-8.10.7.config  ghc-8.4.4.config  ghc-8.6.5.config  ghc-8.8.4.config  ghc-9.0.2.config  ghc-9.10.1.config  ghc-9.12.1.config  ghc-9.12.2.config  ghc-9.14.1.config  ghc-9.2.7.config  ghc-9.2.8.config  ghc-9.4.4.config  ghc-9.4.8.config  ghc-9.6.1.config  ghc-9.6.3.config  ghc-9.6.4.config  ghc-9.6.5.config  ghc-9.8.1.config  ghc-9.8.2.config  ghc-9.8.4.config
examples/: sandbox.hs
